feat: adds presence-doc page docs: documents how to create pages

--- a/docs/presence-bot.mdx
+++ b/docs/presence-bot.mdx
@@ -68,6 +68,15 @@ The presence bot's primary goals were to:
 - [Presence Twin]
 - [Presence UI]
 
+<CanvasBanner>
+
+## Documentation
+
+</CanvasBanner>
+
+- [Presence Docs]
+
 [presence twin]: ./presence-twin
 [presence cube]: /docs/presence-cube
 [presence ui]: /docs/presence-ui
+[Presence docs]: /docs/presence-docs
