feat: adds typescript support to config and components
* adds tsconfig
* types the docusaurus config
* types react components

closes [#29]

[#29]: https://gitlab.com/ohsnaparts/osasoftworks/zube/presence-docs/-/issues/29

--- a/docs/markdown-styleguide.mdx
+++ b/docs/markdown-styleguide.mdx
@@ -207,8 +207,8 @@ This is a warning
 
 ## MDX / Markdown + JSX
 
-import Highlight from '/src/components/highlight.jsx'
-import CanvasBanner from '/src/components/canvas-banner.jsx'
+import Highlight from '/src/components/highlight.tsx'
+import CanvasBanner from '/src/components/canvas-banner.tsx'
 
 <!-- 
 Imports and mdx needs to be separated by at least 1 empty line.
