--- a/docs/presence-glossary.mdx
+++ b/docs/presence-glossary.mdx
@@ -5,7 +5,7 @@ sidebar_label: Presence Glossary
 slug: /presence-glossary
 ---
 
-import { Glossary } from '/src/components/glossary.jsx';
+import { Glossary } from '/src/components/glossary.tsx';
 
 export const glossaryTerms = {
     "bla": "blub"
