--- a/docs/presence-ui.mdx
+++ b/docs/presence-ui.mdx
@@ -4,7 +4,7 @@ title: Presence UI
 sidebar_label: Presence UI
 slug: /presence-ui
 ---
-import CanvasBanner from '/src/components/canvas-banner.jsx'
+import CanvasBanner from '/src/components/canvas-banner.tsx'
 
 
 <CanvasBanner marginTop="10px">
