--- a/docs/presence-bot.mdx
+++ b/docs/presence-bot.mdx
@@ -4,7 +4,7 @@ slug: /
 title: Presence Bot
 ---
 
-import CanvasBanner from "/src/components/canvas-banner.jsx";
+import CanvasBanner from "/src/components/canvas-banner.tsx";
 
 <CanvasBanner marginTop="10px">
 
