--- a/docs/presence-cube.mdx
+++ b/docs/presence-cube.mdx
@@ -4,7 +4,7 @@ slug: /presence-cube
 title: Presence Cube
 ---
 
-import CanvasBanner from '/src/components/canvas-banner.jsx'
+import CanvasBanner from '/src/components/canvas-banner.tsx'
 
 <CanvasBanner marginTop="10px">
 
