--- a/docs/markdown-styleguide.mdx
+++ b/docs/markdown-styleguide.mdx
@@ -43,9 +43,9 @@ Strikethrough uses two tildes. ~~Scratch this.~~
 
 1. First ordered list item
 1. Another item
-   - Unordered sub-list.
+- Unordered sub-list.
 1. Actual numbers don't matter, just that it's a number
-   1. Ordered sub-list
+1. Ordered sub-list
 1. And another item.
 
 * Unordered list can use asterisks
@@ -75,9 +75,9 @@ URLs and URLs in angle brackets will automatically get turned into links.
 
 Some text to show that the reference links can follow later.
 
-[arbitrary case-insensitive reference text]: https://www.mozilla.org/
-[1]: http://slashdot.org/
-[link text itself]: http://www.reddit.com/
+[arbitrary case-insensitive reference text]  https://www.mozilla.org/
+[1]  http://slashdot.org/
+[link text itself]  http://www.reddit.com/
 
 ---
 
@@ -89,7 +89,7 @@ Inline-style: ![alt text](https://github.com/adam-p/markdown-here/raw/master/src
 
 Reference-style: ![alt text][logo]
 
-[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png 'Logo Title Text 2'
+[logo]  https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png 'Logo Title Text 2'
 
 Images from any folder can be used by providing path to file. Path should be relative to markdown file.
 
@@ -154,11 +154,11 @@ Quote break.
 ## Inline HTML
 
 <dl>
-  <dt>Definition list</dt>
-  <dd>Is something people use sometimes.</dd>
+    <dt>Definition list</dt>
+    <dd>Is something people use sometimes.</dd>
 
-  <dt>Markdown in HTML</dt>
-  <dd>Does *not* work **very** well. Use HTML <em>tags</em>.</dd>
+    <dt>Markdown in HTML</dt>
+    <dd>Does *not* work **very** well. Use HTML <em>tags</em>.</dd>
 </dl>
 
 ---
@@ -216,16 +216,54 @@ React functions must be exported to be usable.
 Register components to the MDXProvider to make reusable components.
 -->
 
-export const HighlightRed = ({ children }) => (
-  <Highlight color="red">{children}</Highlight>
+export const HighlightRed = ({children}) => (
+    <Highlight color="red">{children}</Highlight>
 );
 
 You can write <HighlightRed>**_JSX_**</HighlightRed> and use React components within your _Markdown_ thanks to [MDX](https://mdxjs.com/).
 
 <CanvasBanner marginTop="0" canvasHeight="160px">
 
-1. Apple
-1. Coco Nut
-1. Uni Corn
+    1. Apple
+    1. Coco Nut
+    1. Uni Corn
 
 </CanvasBanner>
+
+
+## Mathematics
+
+https://katex.org/docs/supported.html
+
+```latex
+$$
+I = \int_0^{2\pi} \sin(x)\,dx
+$$
+```
+$$
+I = \int_0^{2\pi} \sin(x)\,dx
+$$
+
+
+
+
+## Dynamic Katex
+
+Using a third-party package, it is possible to dynamically create math expressions.
+
+```code
+import TeX from '@matejmazur/react-katex'
+<TeX math={`c = ${a} + ${b}`}></TeX>
+```
+
+import TeX from '@matejmazur/react-katex'
+
+export const Equation = ({x, upperLimit, lowerLimit, dx}) => {
+    const teX = `I = \\int_${lowerLimit}^\\${upperLimit} ${x}^2 ${dx}`;
+    return <TeX math={teX}></TeX>
+}
+
+<Equation upperLimit="Lleftarrow"
+          lowerLimit="7"
+          x={123 + 3}
+          dx="12" />
