feat: sizes canvas banner to child content
Previously, the canvas banner was sized absolutely by providing static hard coded pixel values. This caused problems on smaller devices of course, therefore the logic was changed to size the canvas according to the child content that is being wrapped.

Known issues:
* The padding default value is not recognized, therefore it had to be set explicitly on every <CanvasBanner> usage => [#38]

[#38]: https://gitlab.com/ohsnaparts/osasoftworks/zube/presence-docs/-/issues/38

--- a/docs/presence-cube.mdx
+++ b/docs/presence-cube.mdx
@@ -6,7 +6,7 @@ title: Presence Cube
 
 import CanvasBanner from '/src/components/canvas-banner.tsx'
 
-<CanvasBanner marginTop="10px">
+<CanvasBanner padding={'1.5rem'}>
 
 ## Mission Statement
 
