--- a/docs/presence-twin.mdx
+++ b/docs/presence-twin.mdx
@@ -8,7 +8,7 @@ slug: /presence-twin
 import CanvasBanner from '/src/components/canvas-banner.tsx'
 
 
-<CanvasBanner marginTop="10px">
+<CanvasBanner padding={'1.5rem'}>
 
 ## Mission Statement
 
