--- a/docs/presence-ui.mdx
+++ b/docs/presence-ui.mdx
@@ -7,7 +7,7 @@ slug: /presence-ui
 import CanvasBanner from '/src/components/canvas-banner.tsx'
 
 
-<CanvasBanner marginTop="10px">
+<CanvasBanner padding={'1.5rem'}>
 
 ## Mission Statement
 </CanvasBanner>
@@ -48,7 +48,7 @@ digital_twin -do-> port_digital_twin: 1..*
 @enduml
 ```
 
-<CanvasBanner>
+<CanvasBanner padding={'1.5rem'}>
 
 ## Boundary conditions
 </CanvasBanner>
@@ -63,7 +63,7 @@ digital_twin -do-> port_digital_twin: 1..*
 | Libraries and Frameworks  | Since the deadline is quite intense, it is best to rely on tools the team is already familiar with including: `Angular`, `Mobx`, `RXJS`, `Nx`, `npm`, `typescript`, `scss`, `docker`, `docker-compose`, `powershell` |
 | Design Patterns           | Domain Driven Design, SOLID, Quality-Driven Software Architecture, Modulith                                                                                                                                          |
 
-<CanvasBanner>
+<CanvasBanner padding={'1.5rem'}>
 
 ## Top Quality Goals
 </CanvasBanner>
@@ -89,7 +89,7 @@ digital_twin -do-> port_digital_twin: 1..*
   - As a user, given state changes, I will be able to determine their accuracy. For instance, changes in criticality values could be tagged with it's latest update timestamp to prevent making decisions on out-of-date data.
 
 
-<CanvasBanner>
+<CanvasBanner padding={'1.5rem'}>
 
 ## Informal Diagram
 </CanvasBanner>
@@ -118,7 +118,7 @@ node "<<system>>\nPresence Twin UI" {
 }
 ```
 
-<CanvasBanner>
+<CanvasBanner padding={'1.5rem'}>
 
 ## Accepted Compromises
 </CanvasBanner> 
