--- a/docs/presence-bot.mdx
+++ b/docs/presence-bot.mdx
@@ -6,7 +6,7 @@ title: Presence Bot
 
 import CanvasBanner from "/src/components/canvas-banner.tsx";
 
-<CanvasBanner marginTop="10px">
+<CanvasBanner padding={'1.5rem'}>
 
 ## Mission Statement
 
@@ -28,7 +28,7 @@ The presence bot's primary goals were to:
 @enduml
 ```
 
-<CanvasBanner>
+<CanvasBanner padding={'1.5rem'}>
 
 ## System Context
 
@@ -41,7 +41,7 @@ The presence bot's primary goals were to:
 | **MS Teams**      | The main hub for communication at the office and therefore most obvious choice of notification channel available to all employees. Employees get real time updates and push notifications. Simple and uncomplicated contact tracing. |
 | **User**          | Subscribe to a communication channel and consume real time updates                                                                                                                                                                   |
 
-<CanvasBanner>
+<CanvasBanner padding={'1.5rem'}>
 
 ## Technical Context
 
@@ -58,7 +58,7 @@ The presence bot's primary goals were to:
 | **Presence UI**    | User interface capable of visualizing and interacting with the Presence Twin. This UI enables users to directly look up current presence information as well as directly look up current presence information. without having to accquire an expensive / time consuming physical device                                |
 | **Presence Cube**  | Physical device that displays presence infos and notifications on-site.                                                                                                                                                                                                                                                |
 
-<CanvasBanner>
+<CanvasBanner padding={'1.5rem'}>
 
 ## Services
 
@@ -68,7 +68,7 @@ The presence bot's primary goals were to:
 - [Presence Twin]
 - [Presence UI]
 
-<CanvasBanner>
+<CanvasBanner padding={'1.5rem'}>
 
 ## Documentation
 
