--- a/docs/presence-ui.mdx
+++ b/docs/presence-ui.mdx
@@ -4,7 +4,7 @@ title: Presence UI
 sidebar_label: Presence UI
 slug: /presence-ui
 ---
-import CanvasBanner from '/src/components/canvas-banner.tsx'
+import CanvasBanner from '@components/canvas-banner.tsx'
 
 
 <CanvasBanner padding={'1.5rem'}>
@@ -23,7 +23,7 @@ The Presence UI provides a frontend to visualize and interact with these device 
 [presence twin]: ./presence-twin/
 [presence cube]: ./presence-cube/
 
-<CanvasBanner>
+<CanvasBanner padding={'1.5rem'}>
 
 ## Functional Context
 </CanvasBanner>
