--- a/docs/markdown-styleguide.mdx
+++ b/docs/markdown-styleguide.mdx
@@ -207,8 +207,8 @@ This is a warning
 
 ## MDX / Markdown + JSX
 
-import Highlight from '/src/components/highlight.tsx'
-import CanvasBanner from '/src/components/canvas-banner.tsx'
+import Highlight from '@components/highlight.tsx'
+import CanvasBanner from '@components/canvas-banner.tsx'
 
 <!-- 
 Imports and mdx needs to be separated by at least 1 empty line.
@@ -262,12 +262,12 @@ import TeX from '@matejmazur/react-katex'
 
 ## Evaluatable Calculations
 
-import {Calculation} from "/src/components/calculation";
+import {Calculation} from "@components/calculation";
 
 Using the custom `Calculation` react component, we can evaluate [complex katex expressions].
 
 ```js
-import {Calculation} from "/src/components/calculation";
+import {Calculation} from "@components/calculation";
 <Calculation
     katexEquation={'\\sqrt{\\frac{{10*a^2 + 20*b^2}}{{c}} + \\frac{{2(a \\cdot b)}}{{2c}} - \\frac{{c}}{{a + b}}}'}
     fractionDigits={3}
@@ -301,13 +301,13 @@ import {Calculation} from "/src/components/calculation";
 
 # Equations
 
-import {Equation} from "/src/components/equation";
+import {Equation} from "@components/equation";
 
 Using the custom `Equations` component, we can evaluate
 equations with unknowns.
 
 ```js
-import {Equation} from "/src/components/calculation";
+import {Equation} from "@components/calculation";
 <Equation katexEquation={'x^2 + ax - b = 0'}
           solveFor={'x'}
           fractionDigits={3}
