--- a/docs/presence-bot.mdx
+++ b/docs/presence-bot.mdx
@@ -4,7 +4,7 @@ slug: /
 title: Presence Bot
 ---
 
-import CanvasBanner from "/src/components/canvas-banner.tsx";
+import CanvasBanner from "@components/canvas-banner.tsx";
 
 <CanvasBanner padding={'1.5rem'}>
 
