--- a/docs/presence-twin.mdx
+++ b/docs/presence-twin.mdx
@@ -5,7 +5,7 @@ sidebar_label: Presence Twin
 slug: /presence-twin
 ---
 
-import CanvasBanner from '/src/components/canvas-banner.tsx'
+import CanvasBanner from '@components/canvas-banner.tsx'
 
 
 <CanvasBanner padding={'1.5rem'}>
