feat: automatically applies canvas-banner to headline elements
Docusaurus allows you to replace or wrap existing elements
```
npm run swizzle -- --list
```

Known issues:
- The font is close aligned to the top, which makes it look awkward. This is due
  to the font not being centered horizontally yet => [#40]

Closes [#34]

[#34]: https://gitlab.com/ohsnaparts/osasoftworks/zube/presence-docs/-/issues/34
[#40]: https://gitlab.com/ohsnaparts/osasoftworks/zube/presence-docs/-/issues/40

--- a/docs/markdown-styleguide.mdx
+++ b/docs/markdown-styleguide.mdx
@@ -208,7 +208,7 @@ This is a warning
 ## MDX / Markdown + JSX
 
 import Highlight from '@components/highlight.tsx'
-import CanvasBanner from '@components/canvas-banner.tsx'
+
 
 <!-- 
 Imports and mdx needs to be separated by at least 1 empty line.
@@ -222,13 +222,16 @@ export const HighlightRed = ({children}) => (
 
 You can write <HighlightRed>**_JSX_**</HighlightRed> and use React components within your _Markdown_ thanks to [MDX](https://mdxjs.com/).
 
-<CanvasBanner marginTop="0" canvasHeight="160px">
+import CanvasBanner from "../src/components/canvas-banner";
+
+<CanvasBanner>
 
     1. Apple
     1. Coco Nut
     1. Uni Corn
 
 </CanvasBanner>
+
 
 
 ## Mathematics
