--- a/docs/presence-bot.mdx
+++ b/docs/presence-bot.mdx
@@ -6,11 +6,7 @@ title: Presence Bot
 
 import CanvasBanner from "@components/canvas-banner.tsx";
 
-<CanvasBanner padding={'1.5rem'}>
-
 ## Mission Statement
-
-</CanvasBanner>
 
 During the global Covid19 pandemic the austrian government decreed that, depending on the size of the building, only a certain amount of people are allowed to stay indoors (`n` employees/m²). In essence that meant that at peak times, only 30 people are allowed to be present at any time of day.
 
@@ -28,11 +24,7 @@ The presence bot's primary goals were to:
 @enduml
 ```
 
-<CanvasBanner padding={'1.5rem'}>
-
 ## System Context
-
-</CanvasBanner>
 
 | **Actor**         | **Description**                                                                                                                                                                                                                      |
 | ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
@@ -41,11 +33,7 @@ The presence bot's primary goals were to:
 | **MS Teams**      | The main hub for communication at the office and therefore most obvious choice of notification channel available to all employees. Employees get real time updates and push notifications. Simple and uncomplicated contact tracing. |
 | **User**          | Subscribe to a communication channel and consume real time updates                                                                                                                                                                   |
 
-<CanvasBanner padding={'1.5rem'}>
-
 ## Technical Context
-
-</CanvasBanner>
 
 | **Actor**          | **Description**                                                                                                                                                                                                                                                                                                        |
 | ------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -58,25 +46,17 @@ The presence bot's primary goals were to:
 | **Presence UI**    | User interface capable of visualizing and interacting with the Presence Twin. This UI enables users to directly look up current presence information as well as directly look up current presence information. without having to accquire an expensive / time consuming physical device                                |
 | **Presence Cube**  | Physical device that displays presence infos and notifications on-site.                                                                                                                                                                                                                                                |
 
-<CanvasBanner padding={'1.5rem'}>
-
 ## Services
-
-</CanvasBanner>
 
 - [Presence Cube]
 - [Presence Twin]
 - [Presence UI]
 
-<CanvasBanner padding={'1.5rem'}>
-
 ## Documentation
-
-</CanvasBanner>
 
 - [Presence Docs]
 
-[presence twin]: ./presence-twin
-[presence cube]: /docs/presence-cube
-[presence ui]: /docs/presence-ui
-[Presence docs]: /docs/presence-docs
+[presence twin]  ./presence-twin
+[presence cube]  /docs/presence-cube
+[presence ui]  /docs/presence-ui
+[Presence docs]  /docs/presence-docs
