--- a/docs/presence-bot.mdx
+++ b/docs/presence-bot.mdx
@@ -12,16 +12,12 @@ During the global Covid19 pandemic the austrian government decreed that, dependi
 
 The presence bot's primary goals were to:
 
-```plantuml
+```mermaid
+flowchart
 
-@startuml
-
-:**Count** the employees present at the office;
-:**Interpret** the criticality of that number;
-:**Decide** on a communication channel;
-:**Publish** a notification message to an intranet public channel;
-
-@enduml
+Count[Count Employees] --> Interpret[Interpret Criticality]
+Interpret --> Decide[Decide Communication Channel]
+Decide --> Publish[Publish Notification]
 ```
 
 ## System Context
@@ -37,14 +33,14 @@ The presence bot's primary goals were to:
 
 | **Actor**          | **Description**                                                                                                                                                                                                                                                                                                        |
 | ------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Access System**  | Keeps track of all employees entering the office.                                                                                                                                                                                                                                                                      |
-| **Access API**     | Provides an access point to the access system.                                                                                                                                                                                                                                                                         |
-| **Presence Bot**   | Periodically polls the current employee count and triggers a power automate flow with the current employee count.                                                                                                                                                                                                      |
-| **Messaging API**  | Facade that hides technical details needed to trigger a power automate flow.                                                                                                                                                                                                                                           |
-| **Power Automate** | Bridge that allows us to communicate with company resources in an authenticated manner without breaking company regulations. Interprets the criticality, and builds a formatted message to be sent to the companies communication hub (MS Teams). Periodically pushes a teams messages for simplified contact tracing. |
-| **Presence Twin**  | Virtual counter part and digital twin to a Presence Cube. Through the twin users and machines can interact with physical devices                                                                                                                                                                                       |
-| **Presence UI**    | User interface capable of visualizing and interacting with the Presence Twin. This UI enables users to directly look up current presence information as well as directly look up current presence information. without having to accquire an expensive / time consuming physical device                                |
-| **Presence Cube**  | Physical device that displays presence infos and notifications on-site.                                                                                                                                                                                                                                                |
+| **[Access System]**  | Keeps track of all employees entering the office.                                                                                                                                                                                                                                                                      |
+| **[Access API]**     | Provides an access point to the access system.                                                                                                                                                                                                                                                                         |
+| **[Presence Bot]**   | Periodically polls the current employee count and triggers a power automate flow with the current employee count.                                                                                                                                                                                                      |
+| **[Messaging API]**  | Facade that hides technical details needed to trigger a power automate flow.                                                                                                                                                                                                                                           |
+| **[Power Automate]** | Bridge that allows us to communicate with company resources in an authenticated manner without breaking company regulations. Interprets the criticality, and builds a formatted message to be sent to the companies communication hub (MS Teams). Periodically pushes a teams messages for simplified contact tracing. |
+| **[Presence Twin]**  | Virtual counter part and digital twin to a Presence Cube. Through the twin users and machines can interact with physical devices.                                                                                                                                                                                       |
+| **[Presence UI]**    | User interface capable of visualizing and interacting with the Presence Twin. This UI enables users to directly look up current presence information as well as directly look up current presence information. without having to accquire an expensive / time consuming physical device                                |
+| **[Presence Cube]**  | Physical device that displays presence infos and notifications on-site.                                                                                                                                                                                                                                                |
 
 ## Services
 
