feat: extends glossary and makes it linkable

--- a/docs/presence-glossary.mdx
+++ b/docs/presence-glossary.mdx
@@ -8,7 +8,7 @@ slug: /presence-glossary
 import { Glossary } from '@components/glossary.tsx';
 
 export const glossaryTerms = {
-    "bla": "blub"
+    "Presence Criticality": "Shows the how 'full' the current office currently is (normal=plenty of space left, warning=only limited space left, critical=only key personell should come to the office)"
 };
     
 
